fix(list): list item body overflow issue

--- a/list/internal/listitem/_list-item.scss
+++ b/list/internal/listitem/_list-item.scss
@@ -134,6 +134,7 @@
     display: inline-flex;
     justify-content: center;
     flex-direction: column;
+    max-width: 100%;
     box-sizing: border-box;
     flex: 1 0 0;
     padding-inline-start: var(--_list-item-leading-space);
@@ -160,7 +161,6 @@
   }
 
   .label-text {
-    display: flex;
     text-overflow: ellipsis;
     overflow-x: hidden;
     white-space: nowrap;
